--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@ body {
     background-color: #b5553a;
     margin: 0;
 }
-section {
+section, footer {
     padding: 1em;
 }
 #banner {
@@ -32,4 +32,24 @@ section {
 img {
     width: 100%;
     max-width: 200px;
+}
+
+#blog, #servicos {
+    color: white;
+}
+.artigos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.artigos article {
+    /* display: inline-block; */
+    min-width: 200px;
+    max-width: 300px;
+    width: 30%;
+    text-align: left;
+    padding: 1em;
+    border: 1px solid;
+    border-radius: 5px;
+    margin: 1em;
 }
